--- a/app/src/main/res/layout/movies_item.xml
+++ b/app/src/main/res/layout/movies_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/posterIv"
         android:layout_width="109dp"
         android:layout_height="112dp"
         android:layout_marginStart="16dp"
@@ -16,22 +16,22 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/titleTv"
         android:layout_width="106dp"
         android:layout_height="29dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        android:text="Title"
+        app:layout_constraintStart_toEndOf="@+id/posterIv"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/descriptionTv"
         android:layout_width="243dp"
         android:layout_height="63dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:text="Description"
+        app:layout_constraintStart_toEndOf="@+id/posterIv"
+        app:layout_constraintTop_toBottomOf="@+id/titleTv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
