--- a/app/src/main/res/layout/movies_item.xml
+++ b/app/src/main/res/layout/movies_item.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/posterIv"
-        android:layout_width="109dp"
-        android:layout_height="112dp"
+        android:layout_width="116dp"
+        android:layout_height="156dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,21 +17,26 @@
 
     <TextView
         android:id="@+id/titleTv"
-        android:layout_width="106dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="247dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
+        android:maxLines="2"
         android:text="Title"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/posterIv"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/descriptionTv"
-        android:layout_width="243dp"
-        android:layout_height="63dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="248dp"
+        android:layout_height="122dp"
+        android:layout_marginStart="12dp"
+        android:ellipsize="end"
+        android:maxLines="5"
         android:text="Description"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/posterIv"
         app:layout_constraintTop_toBottomOf="@+id/titleTv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
